--- a/demo/src/main/resources/templates/proveedores.html
+++ b/demo/src/main/resources/templates/proveedores.html
@@ -4,6 +4,8 @@
     <title>Proveedores</title>
 </head>
 <body>
+<th:block th:replace="navbar :: body"></th:block>
+
 <h1>Lista de Proveedores</h1>
 <table>
     <tr>
